add onnx best model

--- a/YoloBeMyDataTrain.ipynb
+++ b/YoloBeMyDataTrain.ipynb
@@ -33,7 +33,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -140,19 +140,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 10,
       "metadata": {
         "id": "q1RdRcD0Iofe"
       },
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "Matplotlib is building the font cache; this may take a moment.\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "from ultralytics import YOLO\n",
         "\n",
@@ -161,7 +153,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -180,9 +172,9 @@
             "Ultralytics YOLOv8.0.196 🚀 Python-3.10.14 torch-2.4.1 CPU (Apple M1)\n",
             "YOLOv8n summary (fused): 168 layers, 3151904 parameters, 0 gradients, 8.7 GFLOPs\n",
             "\n",
-            "image 1/1 /Users/evakhromeeva/Projects/BeYOLOSegmentation/yolo-food/images/train/951896_0b2e4483-7925-4b5f-a1b1-c97b3e575f2a.jpg: 640x480 2 cups, 1 cake, 1 dining table, 39.1ms\n",
-            "Speed: 2.2ms preprocess, 39.1ms inference, 1.0ms postprocess per image at shape (1, 3, 640, 480)\n",
-            "Results saved to \u001b[1mruns/detect/predict\u001b[0m\n",
+            "image 1/1 /Users/evakhromeeva/Projects/BeYOLOSegmentation/yolo-food/images/train/951896_0b2e4483-7925-4b5f-a1b1-c97b3e575f2a.jpg: 640x480 2 cups, 1 cake, 1 dining table, 36.1ms\n",
+            "Speed: 1.7ms preprocess, 36.1ms inference, 1.1ms postprocess per image at shape (1, 3, 640, 480)\n",
+            "Results saved to \u001b[1mruns/detect/predict2\u001b[0m\n",
             "💡 Learn more at https://docs.ultralytics.com/modes/predict\n"
           ]
         }
@@ -195,7 +187,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -212,17 +204,17 @@
               "<IPython.core.display.Image object>"
             ]
           },
-          "execution_count": 9,
+          "execution_count": 7,
           "metadata": {
             "image/jpeg": {
-              "height": 600
+              "height": 200
             }
           },
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "Image(filename='runs/detect/predict/951896_0b2e4483-7925-4b5f-a1b1-c97b3e575f2a.jpg', height=600)"
+        "Image(filename='runs/detect/predict/951896_0b2e4483-7925-4b5f-a1b1-c97b3e575f2a.jpg', height=200)"
       ]
     },
     {
@@ -913,7 +905,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [
         {
@@ -923,7 +915,7 @@
               "<IPython.core.display.Image object>"
             ]
           },
-          "execution_count": 16,
+          "execution_count": 8,
           "metadata": {
             "image/jpeg": {
               "height": 600
@@ -934,6 +926,114 @@
       ],
       "source": [
         "Image(filename='runs/segment/predict2/951896_0c8e78d0-bc83-4c17-b4a9-5c3787ed56d9.jpg', height=600)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 11,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "/opt/anaconda3/envs/yolov8_segmentation/lib/python3.10/site-packages/ultralytics/nn/tasks.py:567: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+            "  return torch.load(file, map_location='cpu'), file  # load\n",
+            "Ultralytics YOLOv8.0.196 🚀 Python-3.10.14 torch-2.4.1 CPU (Apple M1)\n",
+            "YOLOv8n-seg summary (fused): 195 layers, 3259819 parameters, 0 gradients, 12.0 GFLOPs\n",
+            "\n",
+            "\u001b[34m\u001b[1mPyTorch:\u001b[0m starting from 'runs/segment/train2/weights/best.pt' with input shape (1, 3, 640, 640) BCHW and output shape(s) ((1, 45, 8400), (1, 32, 160, 160)) (6.5 MB)\n",
+            "\u001b[31m\u001b[1mrequirements:\u001b[0m Ultralytics requirement ['onnx>=1.12.0'] not found, attempting AutoUpdate...\n",
+            "Collecting onnx>=1.12.0\n",
+            "  Downloading onnx-1.16.2-cp310-cp310-macosx_11_0_universal2.whl.metadata (16 kB)\n",
+            "Requirement already satisfied: numpy>=1.20 in /opt/anaconda3/envs/yolov8_segmentation/lib/python3.10/site-packages (from onnx>=1.12.0) (2.1.1)\n",
+            "Requirement already satisfied: protobuf>=3.20.2 in /opt/anaconda3/envs/yolov8_segmentation/lib/python3.10/site-packages (from onnx>=1.12.0) (5.28.1)\n",
+            "Downloading onnx-1.16.2-cp310-cp310-macosx_11_0_universal2.whl (16.5 MB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m16.5/16.5 MB\u001b[0m \u001b[31m5.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+            "\u001b[?25hInstalling collected packages: onnx\n",
+            "Successfully installed onnx-1.16.2\n",
+            "\n",
+            "\u001b[31m\u001b[1mrequirements:\u001b[0m AutoUpdate success ✅ 5.9s, installed 1 package: ['onnx>=1.12.0']\n",
+            "\u001b[31m\u001b[1mrequirements:\u001b[0m ⚠️ \u001b[1mRestart runtime or rerun command for updates to take effect\u001b[0m\n",
+            "\n",
+            "\n",
+            "\u001b[34m\u001b[1mONNX:\u001b[0m starting export with onnx 1.16.2 opset 19...\n",
+            "\u001b[34m\u001b[1mONNX:\u001b[0m export success ✅ 7.0s, saved as 'runs/segment/train2/weights/best.onnx' (12.6 MB)\n",
+            "\n",
+            "Export complete (7.5s)\n",
+            "Results saved to \u001b[1m/Users/evakhromeeva/Projects/BeYOLOSegmentation/runs/segment/train2/weights\u001b[0m\n",
+            "Predict:         yolo predict task=segment model=runs/segment/train2/weights/best.onnx imgsz=640  \n",
+            "Validate:        yolo val task=segment model=runs/segment/train2/weights/best.onnx imgsz=640 data=yolo-food/data_config.yaml  \n",
+            "Visualize:       https://netron.app\n",
+            "💡 Learn more at https://docs.ultralytics.com/modes/export\n"
+          ]
+        }
+      ],
+      "source": [
+        "!yolo export model=runs/segment/train2/weights/best.pt format=onnx  # creates 'yolov8n.onnx'"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 13,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "WARNING ⚠️ Unable to automatically guess model task, assuming 'task=detect'. Explicitly define task for your model, i.e. 'task=detect', 'segment', 'classify', or 'pose'.\n",
+            "Ultralytics YOLOv8.0.196 🚀 Python-3.10.14 torch-2.4.1 CPU (Apple M1)\n",
+            "Loading best-be-yolo.onnx for ONNX Runtime inference...\n",
+            "\n",
+            "Downloading https://ultralytics.com/images/bus.jpg to 'bus.jpg'...\n",
+            "100%|████████████████████████████████████████| 134k/134k [00:00<00:00, 3.66MB/s]\n",
+            "Traceback (most recent call last):\n",
+            "  File \"/opt/anaconda3/envs/yolov8_segmentation/bin/yolo\", line 8, in <module>\n",
+            "    sys.exit(entrypoint())\n",
+            "  File \"/opt/anaconda3/envs/yolov8_segmentation/lib/python3.10/site-packages/ultralytics/cfg/__init__.py\", line 445, in entrypoint\n",
+            "    getattr(model, mode)(**overrides)  # default args from model\n",
+            "  File \"/opt/anaconda3/envs/yolov8_segmentation/lib/python3.10/site-packages/ultralytics/engine/model.py\", line 242, in predict\n",
+            "    return self.predictor.predict_cli(source=source) if is_cli else self.predictor(source=source, stream=stream)\n",
+            "  File \"/opt/anaconda3/envs/yolov8_segmentation/lib/python3.10/site-packages/ultralytics/engine/predictor.py\", line 205, in predict_cli\n",
+            "    for _ in gen:  # running CLI inference without accumulating any outputs (do not modify)\n",
+            "  File \"/opt/anaconda3/envs/yolov8_segmentation/lib/python3.10/site-packages/torch/utils/_contextlib.py\", line 36, in generator_context\n",
+            "    response = gen.send(None)\n",
+            "  File \"/opt/anaconda3/envs/yolov8_segmentation/lib/python3.10/site-packages/ultralytics/engine/predictor.py\", line 278, in stream_inference\n",
+            "    s += self.write_results(i, self.results, (p, im, im0))\n",
+            "  File \"/opt/anaconda3/envs/yolov8_segmentation/lib/python3.10/site-packages/ultralytics/engine/predictor.py\", line 166, in write_results\n",
+            "    log_string += result.verbose()\n",
+            "  File \"/opt/anaconda3/envs/yolov8_segmentation/lib/python3.10/site-packages/ultralytics/engine/results.py\", line 275, in verbose\n",
+            "    log_string += f\"{n} {self.names[int(c)]}{'s' * (n > 1)}, \"\n",
+            "KeyError: 16\n"
+          ]
+        }
+      ],
+      "source": [
+        "!yolo predict model=best-be-yolo.onnx source='https://ultralytics.com/images/bus.jpg'"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 15,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Ultralytics YOLOv8.0.196 🚀 Python-3.10.14 torch-2.4.1 CPU (Apple M1)\n",
+            "Loading best-be-yolo.onnx for ONNX Runtime inference...\n",
+            "\n",
+            "image 1/1 /Users/evakhromeeva/Projects/BeYOLOSegmentation/yolo-food/images/train/951896_IMG_0910.jpg: 640x640 1 Container, 1 Salad, 69.2ms\n",
+            "Speed: 2.0ms preprocess, 69.2ms inference, 1.8ms postprocess per image at shape (1, 3, 640, 640)\n",
+            "Results saved to \u001b[1mruns/segment/predict3\u001b[0m\n",
+            "💡 Learn more at https://docs.ultralytics.com/modes/predict\n"
+          ]
+        }
+      ],
+      "source": [
+        "!yolo task=segment mode=predict model=best-be-yolo.onnx source='yolo-food/images/train/951896_IMG_0910.jpg' conf=0.25 save=True"
       ]
     }
   ],
