--- a/YoloBeMyDataTrain.ipynb
+++ b/YoloBeMyDataTrain.ipynb
@@ -33,7 +33,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -41,12 +41,12 @@
         "# fix path to dataset at \"/Users/evakhromeeva/Library/Application Support/Ultralytics/settings.yaml\"\n",
         "import os\n",
         "os.environ['CUDA_VISIBLE_DEVICES'] = '0'\n",
-        "DATA_DIR = './yolo-food/'"
+        "DATA_DIR = './FoodSeg103/'"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -60,30 +60,22 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Collecting ultralytics==8.0.196\n",
-            "  Downloading ultralytics-8.0.196-py3-none-any.whl.metadata (31 kB)\n",
+            "Requirement already satisfied: ultralytics==8.0.196 in /opt/anaconda3/envs/yolov8_segmentation/lib/python3.10/site-packages (8.0.196)\n",
             "Requirement already satisfied: matplotlib>=3.3.0 in /opt/anaconda3/envs/yolov8_segmentation/lib/python3.10/site-packages (from ultralytics==8.0.196) (3.9.2)\n",
             "Requirement already satisfied: numpy>=1.22.2 in /opt/anaconda3/envs/yolov8_segmentation/lib/python3.10/site-packages (from ultralytics==8.0.196) (2.1.1)\n",
-            "Collecting opencv-python>=4.6.0 (from ultralytics==8.0.196)\n",
-            "  Downloading opencv_python-4.10.0.84-cp37-abi3-macosx_11_0_arm64.whl.metadata (20 kB)\n",
+            "Requirement already satisfied: opencv-python>=4.6.0 in /opt/anaconda3/envs/yolov8_segmentation/lib/python3.10/site-packages (from ultralytics==8.0.196) (4.10.0.84)\n",
             "Requirement already satisfied: pillow>=7.1.2 in /opt/anaconda3/envs/yolov8_segmentation/lib/python3.10/site-packages (from ultralytics==8.0.196) (10.4.0)\n",
             "Requirement already satisfied: pyyaml>=5.3.1 in /opt/anaconda3/envs/yolov8_segmentation/lib/python3.10/site-packages (from ultralytics==8.0.196) (6.0.2)\n",
             "Requirement already satisfied: requests>=2.23.0 in /opt/anaconda3/envs/yolov8_segmentation/lib/python3.10/site-packages (from ultralytics==8.0.196) (2.32.3)\n",
             "Requirement already satisfied: scipy>=1.4.1 in /opt/anaconda3/envs/yolov8_segmentation/lib/python3.10/site-packages (from ultralytics==8.0.196) (1.14.1)\n",
-            "Collecting torch>=1.8.0 (from ultralytics==8.0.196)\n",
-            "  Downloading torch-2.4.1-cp310-none-macosx_11_0_arm64.whl.metadata (26 kB)\n",
-            "Collecting torchvision>=0.9.0 (from ultralytics==8.0.196)\n",
-            "  Downloading torchvision-0.19.1-cp310-cp310-macosx_11_0_arm64.whl.metadata (6.0 kB)\n",
+            "Requirement already satisfied: torch>=1.8.0 in /opt/anaconda3/envs/yolov8_segmentation/lib/python3.10/site-packages (from ultralytics==8.0.196) (2.4.1)\n",
+            "Requirement already satisfied: torchvision>=0.9.0 in /opt/anaconda3/envs/yolov8_segmentation/lib/python3.10/site-packages (from ultralytics==8.0.196) (0.19.1)\n",
             "Requirement already satisfied: tqdm>=4.64.0 in /opt/anaconda3/envs/yolov8_segmentation/lib/python3.10/site-packages (from ultralytics==8.0.196) (4.66.5)\n",
-            "Collecting pandas>=1.1.4 (from ultralytics==8.0.196)\n",
-            "  Downloading pandas-2.2.2-cp310-cp310-macosx_11_0_arm64.whl.metadata (19 kB)\n",
-            "Collecting seaborn>=0.11.0 (from ultralytics==8.0.196)\n",
-            "  Downloading seaborn-0.13.2-py3-none-any.whl.metadata (5.4 kB)\n",
+            "Requirement already satisfied: pandas>=1.1.4 in /opt/anaconda3/envs/yolov8_segmentation/lib/python3.10/site-packages (from ultralytics==8.0.196) (2.2.2)\n",
+            "Requirement already satisfied: seaborn>=0.11.0 in /opt/anaconda3/envs/yolov8_segmentation/lib/python3.10/site-packages (from ultralytics==8.0.196) (0.13.2)\n",
             "Requirement already satisfied: psutil in /opt/anaconda3/envs/yolov8_segmentation/lib/python3.10/site-packages (from ultralytics==8.0.196) (5.9.0)\n",
-            "Collecting py-cpuinfo (from ultralytics==8.0.196)\n",
-            "  Downloading py_cpuinfo-9.0.0-py3-none-any.whl.metadata (794 bytes)\n",
-            "Collecting thop>=0.1.1 (from ultralytics==8.0.196)\n",
-            "  Downloading thop-0.1.1.post2209072238-py3-none-any.whl.metadata (2.7 kB)\n",
+            "Requirement already satisfied: py-cpuinfo in /opt/anaconda3/envs/yolov8_segmentation/lib/python3.10/site-packages (from ultralytics==8.0.196) (9.0.0)\n",
+            "Requirement already satisfied: thop>=0.1.1 in /opt/anaconda3/envs/yolov8_segmentation/lib/python3.10/site-packages (from ultralytics==8.0.196) (0.1.1.post2209072238)\n",
             "Requirement already satisfied: contourpy>=1.0.1 in /opt/anaconda3/envs/yolov8_segmentation/lib/python3.10/site-packages (from matplotlib>=3.3.0->ultralytics==8.0.196) (1.3.0)\n",
             "Requirement already satisfied: cycler>=0.10 in /opt/anaconda3/envs/yolov8_segmentation/lib/python3.10/site-packages (from matplotlib>=3.3.0->ultralytics==8.0.196) (0.12.1)\n",
             "Requirement already satisfied: fonttools>=4.22.0 in /opt/anaconda3/envs/yolov8_segmentation/lib/python3.10/site-packages (from matplotlib>=3.3.0->ultralytics==8.0.196) (4.53.1)\n",
@@ -91,10 +83,8 @@
             "Requirement already satisfied: packaging>=20.0 in /opt/anaconda3/envs/yolov8_segmentation/lib/python3.10/site-packages (from matplotlib>=3.3.0->ultralytics==8.0.196) (24.1)\n",
             "Requirement already satisfied: pyparsing>=2.3.1 in /opt/anaconda3/envs/yolov8_segmentation/lib/python3.10/site-packages (from matplotlib>=3.3.0->ultralytics==8.0.196) (3.1.4)\n",
             "Requirement already satisfied: python-dateutil>=2.7 in /opt/anaconda3/envs/yolov8_segmentation/lib/python3.10/site-packages (from matplotlib>=3.3.0->ultralytics==8.0.196) (2.9.0)\n",
-            "Collecting pytz>=2020.1 (from pandas>=1.1.4->ultralytics==8.0.196)\n",
-            "  Downloading pytz-2024.2-py2.py3-none-any.whl.metadata (22 kB)\n",
-            "Collecting tzdata>=2022.7 (from pandas>=1.1.4->ultralytics==8.0.196)\n",
-            "  Downloading tzdata-2024.1-py2.py3-none-any.whl.metadata (1.4 kB)\n",
+            "Requirement already satisfied: pytz>=2020.1 in /opt/anaconda3/envs/yolov8_segmentation/lib/python3.10/site-packages (from pandas>=1.1.4->ultralytics==8.0.196) (2024.2)\n",
+            "Requirement already satisfied: tzdata>=2022.7 in /opt/anaconda3/envs/yolov8_segmentation/lib/python3.10/site-packages (from pandas>=1.1.4->ultralytics==8.0.196) (2024.1)\n",
             "Requirement already satisfied: charset-normalizer<4,>=2 in /opt/anaconda3/envs/yolov8_segmentation/lib/python3.10/site-packages (from requests>=2.23.0->ultralytics==8.0.196) (3.3.2)\n",
             "Requirement already satisfied: idna<4,>=2.5 in /opt/anaconda3/envs/yolov8_segmentation/lib/python3.10/site-packages (from requests>=2.23.0->ultralytics==8.0.196) (3.9)\n",
             "Requirement already satisfied: urllib3<3,>=1.21.1 in /opt/anaconda3/envs/yolov8_segmentation/lib/python3.10/site-packages (from requests>=2.23.0->ultralytics==8.0.196) (2.2.3)\n",
@@ -103,34 +93,11 @@
             "Requirement already satisfied: typing-extensions>=4.8.0 in /opt/anaconda3/envs/yolov8_segmentation/lib/python3.10/site-packages (from torch>=1.8.0->ultralytics==8.0.196) (4.12.2)\n",
             "Requirement already satisfied: sympy in /opt/anaconda3/envs/yolov8_segmentation/lib/python3.10/site-packages (from torch>=1.8.0->ultralytics==8.0.196) (1.13.2)\n",
             "Requirement already satisfied: networkx in /opt/anaconda3/envs/yolov8_segmentation/lib/python3.10/site-packages (from torch>=1.8.0->ultralytics==8.0.196) (3.3)\n",
-            "Collecting jinja2 (from torch>=1.8.0->ultralytics==8.0.196)\n",
-            "  Downloading jinja2-3.1.4-py3-none-any.whl.metadata (2.6 kB)\n",
-            "Collecting fsspec (from torch>=1.8.0->ultralytics==8.0.196)\n",
-            "  Downloading fsspec-2024.9.0-py3-none-any.whl.metadata (11 kB)\n",
+            "Requirement already satisfied: jinja2 in /opt/anaconda3/envs/yolov8_segmentation/lib/python3.10/site-packages (from torch>=1.8.0->ultralytics==8.0.196) (3.1.4)\n",
+            "Requirement already satisfied: fsspec in /opt/anaconda3/envs/yolov8_segmentation/lib/python3.10/site-packages (from torch>=1.8.0->ultralytics==8.0.196) (2024.9.0)\n",
             "Requirement already satisfied: six>=1.5 in /opt/anaconda3/envs/yolov8_segmentation/lib/python3.10/site-packages (from python-dateutil>=2.7->matplotlib>=3.3.0->ultralytics==8.0.196) (1.16.0)\n",
-            "Collecting MarkupSafe>=2.0 (from jinja2->torch>=1.8.0->ultralytics==8.0.196)\n",
-            "  Downloading MarkupSafe-2.1.5-cp310-cp310-macosx_10_9_universal2.whl.metadata (3.0 kB)\n",
-            "Requirement already satisfied: mpmath<1.4,>=1.1.0 in /opt/anaconda3/envs/yolov8_segmentation/lib/python3.10/site-packages (from sympy->torch>=1.8.0->ultralytics==8.0.196) (1.3.0)\n",
-            "Downloading ultralytics-8.0.196-py3-none-any.whl (631 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m631.1/631.1 kB\u001b[0m \u001b[31m9.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hDownloading opencv_python-4.10.0.84-cp37-abi3-macosx_11_0_arm64.whl (54.8 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m54.8/54.8 MB\u001b[0m \u001b[31m13.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
-            "\u001b[?25hDownloading pandas-2.2.2-cp310-cp310-macosx_11_0_arm64.whl (11.3 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m11.3/11.3 MB\u001b[0m \u001b[31m15.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m \u001b[36m0:00:01\u001b[0m\n",
-            "\u001b[?25hDownloading seaborn-0.13.2-py3-none-any.whl (294 kB)\n",
-            "Downloading thop-0.1.1.post2209072238-py3-none-any.whl (15 kB)\n",
-            "Downloading torch-2.4.1-cp310-none-macosx_11_0_arm64.whl (62.1 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m62.1/62.1 MB\u001b[0m \u001b[31m14.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
-            "\u001b[?25hDownloading torchvision-0.19.1-cp310-cp310-macosx_11_0_arm64.whl (1.7 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.7/1.7 MB\u001b[0m \u001b[31m14.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hDownloading py_cpuinfo-9.0.0-py3-none-any.whl (22 kB)\n",
-            "Downloading pytz-2024.2-py2.py3-none-any.whl (508 kB)\n",
-            "Downloading tzdata-2024.1-py2.py3-none-any.whl (345 kB)\n",
-            "Downloading fsspec-2024.9.0-py3-none-any.whl (179 kB)\n",
-            "Downloading jinja2-3.1.4-py3-none-any.whl (133 kB)\n",
-            "Downloading MarkupSafe-2.1.5-cp310-cp310-macosx_10_9_universal2.whl (18 kB)\n",
-            "Installing collected packages: pytz, py-cpuinfo, tzdata, opencv-python, MarkupSafe, fsspec, pandas, jinja2, torch, seaborn, torchvision, thop, ultralytics\n",
-            "Successfully installed MarkupSafe-2.1.5 fsspec-2024.9.0 jinja2-3.1.4 opencv-python-4.10.0.84 pandas-2.2.2 py-cpuinfo-9.0.0 pytz-2024.2 seaborn-0.13.2 thop-0.1.1.post2209072238 torch-2.4.1 torchvision-0.19.1 tzdata-2024.1 ultralytics-8.0.196\n"
+            "Requirement already satisfied: MarkupSafe>=2.0 in /opt/anaconda3/envs/yolov8_segmentation/lib/python3.10/site-packages (from jinja2->torch>=1.8.0->ultralytics==8.0.196) (2.1.5)\n",
+            "Requirement already satisfied: mpmath<1.4,>=1.1.0 in /opt/anaconda3/envs/yolov8_segmentation/lib/python3.10/site-packages (from sympy->torch>=1.8.0->ultralytics==8.0.196) (1.3.0)\n"
           ]
         }
       ],
@@ -140,19 +107,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 3,
       "metadata": {
         "id": "q1RdRcD0Iofe"
       },
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "Matplotlib is building the font cache; this may take a moment.\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "from ultralytics import YOLO\n",
         "\n",
@@ -190,7 +149,7 @@
       "source": [
         "HOME = os.getcwd()\n",
         "%cd {HOME}\n",
-        "!yolo task=detect mode=predict model=yolov8n.pt conf=0.25 source='yolo-food/images/train/951896_0b2e4483-7925-4b5f-a1b1-c97b3e575f2a.jpg' save=True"
+        "#!yolo task=detect mode=predict model=yolov8n.pt conf=0.25 source='yolo-food/images/train/951896_0b2e4483-7925-4b5f-a1b1-c97b3e575f2a.jpg' save=True"
       ]
     },
     {
