do some tramsformations

--- a/YoloBeMyDataTrain.ipynb
+++ b/YoloBeMyDataTrain.ipynb
@@ -2637,31 +2637,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 88,
+      "execution_count": 116,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "0\n",
-            "asparagus\n",
-            "71778\n",
-            "1\n",
-            "avocado\n",
-            "7517\n",
-            "2\n",
-            "apple\n",
-            "7577\n",
-            "3\n",
-            "avocado\n",
-            "8335\n",
-            "4\n",
-            "apple\n",
-            "10097\n",
-            "5\n",
-            "apple\n",
-            "19232\n",
+            "torch.Size([6, 448, 640])\n",
+            "torch.Size([6, 448, 640])\n",
+            "torch.Size([6, 448, 640])\n",
+            "torch.Size([6, 448, 640])\n",
+            "torch.Size([6, 448, 640])\n",
+            "torch.Size([6, 448, 640])\n",
             "124536\n"
           ]
         }
@@ -2682,14 +2670,15 @@
         "        maskClass = classes_names[int(classes[i[0]])]\n",
         "        maskSum = int(torch.sum(result.masks.data[i[0]]))\n",
         "        total = total + maskSum\n",
-        "        print(maskClass)\n",
-        "        print(maskSum)\n",
+        "        #print(maskClass)\n",
+        "        #print(maskSum)\n",
+        "        print(result.masks.data.shape)\n",
         "print(total)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 103,
+      "execution_count": 110,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -2698,49 +2687,46 @@
         "    classes = result.boxes.cls.cpu().numpy()\n",
         "    masks = result.masks.data.cpu().numpy()\n",
         "\n",
-        "    semSegResult = {}\n",
-        "    total = 0\n",
+        "    semSegResult = {\n",
+        "        \"total\": 0\n",
+        "    }\n",
         "\n",
         "    for i in enumerate(result.masks.data):\n",
         "          maskClass = classes_names[int(classes[i[0]])]\n",
         "          maskSum = int(torch.sum(result.masks.data[i[0]]))\n",
-        "          total = total + maskSum\n",
+        "          semSegResult[\"total\"] = semSegResult[\"total\"] + maskSum\n",
         "          if maskClass not in  semSegResult:\n",
-        "               semSegResult[maskClass] = torch.sum(result.masks.data[i[0]])\n",
+        "               semSegResult[maskClass] = maskSum\n",
         "          else:\n",
-        "               semSegResult[maskClass] = semSegResult[maskClass] + torch.sum(result.masks.data[i[0]])\n",
+        "               semSegResult[maskClass] = semSegResult[maskClass] + maskSum\n",
         "     \n",
         "    return semSegResult\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 104,
+      "execution_count": 115,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "asparagus\n",
-            "71778\n",
-            "avocado\n",
-            "7517\n",
-            "apple\n",
-            "7577\n",
-            "avocado\n",
-            "8335\n",
-            "apple\n",
-            "10097\n",
-            "apple\n",
-            "19232\n",
-            "{'asparagus': tensor(71778.), 'avocado': tensor(15852.), 'apple': tensor(36906.)}\n"
+            "57.63634611678551\n"
           ]
         }
       ],
       "source": [
-        "count_result(results[0])"
+        "model_res = count_result(results[0])\n",
+        "print(model_res[\"asparagus\"]/model_res[\"total\"]*100)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
