--- a/BEYoloV8_UecFood_256.ipynb
+++ b/BEYoloV8_UecFood_256.ipynb
@@ -1111,7 +1111,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1167,6 +1167,159 @@
         "print(f'Grains: {model_res[\"Grains\"]/model_res[\"total\"]*100}')\n",
         "print(f'Protein: {model_res[\"Protein\"]/model_res[\"total\"]*100}')\n",
         "print(f'Vegetables: {model_res[\"Vegetables\"]/model_res[\"total\"]*100}')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "/opt/anaconda3/envs/yolov8_segmentation/lib/python3.10/site-packages/ultralytics/nn/tasks.py:567: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+            "  return torch.load(file, map_location='cpu'), file  # load\n",
+            "Ultralytics YOLOv8.0.196 🚀 Python-3.10.14 torch-2.4.1 CPU (Apple M1)\n",
+            "WARNING ⚠️ half=True only compatible with GPU export, i.e. use device=0\n",
+            "YOLOv8n-seg summary (fused): 195 layers, 3259039 parameters, 0 gradients, 12.0 GFLOPs\n",
+            "\n",
+            "\u001b[34m\u001b[1mPyTorch:\u001b[0m starting from 'runs/segment/train13/weights/best.pt' with input shape (1, 3, 640, 640) BCHW and output shape(s) ((1, 41, 8400), (1, 32, 160, 160)) (6.5 MB)\n",
+            "\n",
+            "\u001b[34m\u001b[1mONNX:\u001b[0m starting export with onnx 1.16.2 opset 19...\n",
+            "\u001b[34m\u001b[1mONNX:\u001b[0m export success ✅ 1.0s, saved as 'runs/segment/train13/weights/best.onnx' (12.6 MB)\n",
+            "\n",
+            "Export complete (4.6s)\n",
+            "Results saved to \u001b[1m/Users/evakhromeeva/Projects/BeYOLOSegmentation/runs/segment/train13/weights\u001b[0m\n",
+            "Predict:         yolo predict task=segment model=runs/segment/train13/weights/best.onnx imgsz=640  \n",
+            "Validate:        yolo val task=segment model=runs/segment/train13/weights/best.onnx imgsz=640 data=./datasets/uecfood_256-1/data.yaml  \n",
+            "Visualize:       https://netron.app\n",
+            "Loading runs/segment/train13/weights/best.onnx for ONNX Runtime inference...\n",
+            "\n",
+            "image 1/1 /Users/evakhromeeva/Projects/BeYOLOSegmentation/test_meal_img.jpeg: 640x640 2 Vegetabless, 144.0ms\n",
+            "Speed: 3.7ms preprocess, 144.0ms inference, 6.4ms postprocess per image at shape (1, 3, 640, 640)\n"
+          ]
+        }
+      ],
+      "source": [
+        "from ultralytics import YOLO\n",
+        "\n",
+        "# Load the YOLOv8 model\n",
+        "model = YOLO(\"runs/segment/train13/weights/best.pt\")\n",
+        "\n",
+        "# Export the model to ONNX format\n",
+        "model.export(format=\"onnx\", half=True, optimize=True)  # creates 'yolov8n.onnx'\n",
+        "\n",
+        "# Load the exported ONNX model\n",
+        "onnx_model = YOLO(\"runs/segment/train13/weights/best.onnx\")\n",
+        "\n",
+        "# Run inference\n",
+        "results = onnx_model(\"test_meal_img.jpeg\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 3,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Last predict:\n",
+            "Dairy: 0.0\n",
+            "Fruits: 0.0\n",
+            "Grains: 0.0\n",
+            "Protein: 0.0\n",
+            "Vegetables: 100.0\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Prediction with half - presicion ONNX model\n",
+        "model_res = count_result(results[0])\n",
+        "print('Last predict:')\n",
+        "print(f'Dairy: {model_res[\"Dairy\"]/model_res[\"total\"]*100}')\n",
+        "print(f'Fruits: {model_res[\"Fruits\"]/model_res[\"total\"]*100}')\n",
+        "print(f'Grains: {model_res[\"Grains\"]/model_res[\"total\"]*100}')\n",
+        "print(f'Protein: {model_res[\"Protein\"]/model_res[\"total\"]*100}')\n",
+        "print(f'Vegetables: {model_res[\"Vegetables\"]/model_res[\"total\"]*100}')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 4,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[ultralytics.engine.results.Results object with attributes:\n",
+            "\n",
+            "boxes: ultralytics.engine.results.Boxes object\n",
+            "keypoints: None\n",
+            "masks: ultralytics.engine.results.Masks object\n",
+            "names: {0: 'Dairy', 1: 'Fruits', 2: 'Grains', 3: 'Protein', 4: 'Vegetables'}\n",
+            "orig_img: array([[[211, 212, 210],\n",
+            "        [208, 209, 207],\n",
+            "        [219, 220, 218],\n",
+            "        ...,\n",
+            "        [235, 232, 228],\n",
+            "        [231, 228, 224],\n",
+            "        [231, 228, 224]],\n",
+            "\n",
+            "       [[218, 219, 217],\n",
+            "        [218, 219, 217],\n",
+            "        [216, 217, 215],\n",
+            "        ...,\n",
+            "        [229, 226, 222],\n",
+            "        [232, 229, 225],\n",
+            "        [232, 229, 225]],\n",
+            "\n",
+            "       [[222, 223, 221],\n",
+            "        [223, 224, 222],\n",
+            "        [213, 214, 212],\n",
+            "        ...,\n",
+            "        [224, 221, 217],\n",
+            "        [230, 227, 223],\n",
+            "        [230, 227, 223]],\n",
+            "\n",
+            "       ...,\n",
+            "\n",
+            "       [[170, 166, 165],\n",
+            "        [168, 164, 163],\n",
+            "        [167, 163, 162],\n",
+            "        ...,\n",
+            "        [228, 224, 219],\n",
+            "        [226, 222, 217],\n",
+            "        [226, 222, 217]],\n",
+            "\n",
+            "       [[172, 168, 167],\n",
+            "        [171, 167, 166],\n",
+            "        [171, 167, 166],\n",
+            "        ...,\n",
+            "        [227, 223, 218],\n",
+            "        [227, 223, 218],\n",
+            "        [226, 222, 217]],\n",
+            "\n",
+            "       [[167, 163, 162],\n",
+            "        [169, 165, 164],\n",
+            "        [171, 167, 166],\n",
+            "        ...,\n",
+            "        [228, 224, 219],\n",
+            "        [227, 223, 218],\n",
+            "        [227, 223, 218]]], dtype=uint8)\n",
+            "orig_shape: (417, 626)\n",
+            "path: '/Users/evakhromeeva/Projects/BeYOLOSegmentation/test_meal_img.jpeg'\n",
+            "probs: None\n",
+            "save_dir: None\n",
+            "speed: {'preprocess': 3.690004348754883, 'inference': 143.99385452270508, 'postprocess': 6.377935409545898}]\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(results)"
       ]
     }
   ],
